[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "alphagenome-plus"
version = "0.1.0"
description = "Enhanced AlphaGenome toolkit with ML integration, batch processing, and quantum optimization"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Tommaso R. Marena", email = "tommaso.marena@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "alphagenome>=0.4.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "aiohttp>=3.9.0",
    "tqdm>=4.65.0",
    "joblib>=1.3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
]

quantum = [
    "qiskit>=1.0.0",
    "qiskit-aer>=0.13.0",
    "pennylane>=0.33.0",
    "pennylane-qiskit>=0.33.0",
]

protein = [
    "biopython>=1.81",
    "biotite>=0.38.0",
    "fair-esm>=2.0.0",
    "py3Dmol>=2.0.0",
]

visualization = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "dash>=2.14.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

all = [
    "alphagenome-plus[ml,quantum,protein,visualization]",
]

[project.urls]
Homepage = "https://github.com/ChessEngineUS/alphagenome-plus"
Documentation = "https://github.com/ChessEngineUS/alphagenome-plus/docs"
"Bug Tracker" = "https://github.com/ChessEngineUS/alphagenome-plus/issues"
"Source Code" = "https://github.com/ChessEngineUS/alphagenome-plus"

[tool.hatch.build.targets.wheel]
packages = ["src/alphagenome_plus"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=alphagenome_plus --cov-report=html --cov-report=term"
asyncio_mode = "auto"